| Summary: | ASTERISK-29495: Return integer instead of float if response is a whole number | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2021-06-28 09:24:46 | Date Closed: | 2021-08-19 11:05:15 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Functions/func_math |
| Versions: | 18.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | While support for floats is good, a minor caveat with these is if all arguments are integers, the answer will be an whole number and an integer response is likely expected. Currently these always returns a float for MAX, MIN, and ABS. This patch causes the response to be cast to an integer before being printed into the buffer if the answer is a whole number. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-06-28 09:24:46.850-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-08-19 11:05:16.344-0500 Change 16361 merged by Friendly Automation: func_math: Return integer instead of float if possible [https://gerrit.asterisk.org/c/asterisk/+/16361|https://gerrit.asterisk.org/c/asterisk/+/16361] By: Friendly Automation (friendly-automation) 2021-08-19 11:13:06.585-0500 Change 16340 merged by Kevin Harwell: func_math: Return integer instead of float if possible [https://gerrit.asterisk.org/c/asterisk/+/16340|https://gerrit.asterisk.org/c/asterisk/+/16340] By: Friendly Automation (friendly-automation) 2021-08-19 11:13:41.281-0500 Change 16079 merged by Kevin Harwell: func_math: Return integer instead of float if possible [https://gerrit.asterisk.org/c/asterisk/+/16079|https://gerrit.asterisk.org/c/asterisk/+/16079] By: Friendly Automation (friendly-automation) 2021-08-19 11:13:58.694-0500 Change 16362 merged by Kevin Harwell: func_math: Return integer instead of float if possible [https://gerrit.asterisk.org/c/asterisk/+/16362|https://gerrit.asterisk.org/c/asterisk/+/16362] | ||